update small details to webpages and made them all match

--- a/enchanted_forest.html
+++ b/enchanted_forest.html
@@ -9,20 +9,30 @@
   <br /><br />
   <nav>
     <ul>
-        <!--- Delete previous locations excet the one that follows and the beginning --->
-        <a href="index.html">Beginnings</a> |
-        <a href="rain_point_trail.html">Rain Point Trail</a> |
-        <a href="lake_emerald.html">Lake Emerald</a> |
-        <a href="enchanted_forest.html">Enchanted Forest</a> |
-        <a href="meadowbrook_hollow.html">Meadowbrook Hollow</a> |
+      <!--- Delete previous locations excet the one that follows and the beginning --->
+      |
+      <a href="index.html">Beginnings</a>
+      |
+      <a href="rain_point_trail.html">Rain Point Trail</a>
+      |
+      <a href="lake_emerald.html">Lake Emerald</a>
+      |
+      <a href="enchanted_forest.html">Enchanted Forest</a>
+      |
+      <a href="meadowbrook_hollow.html">Meadowbrook Hollow</a>
+      |
     </ul>
-</nav>
+  </nav>
   <!---Title/Location summary of the story--->
   <body bgcolor="lightblue">
     <center>
-      <h1><font color="darkred">The Traveling Lone Wanderer</font></h1>
       <section>
-        <h2>╰┈➤ Location 3:-ˏˋ Welcome to the Enchanted Forest ˊˎ</h2>
+        <h1><font color="darkred">The Traveling Lone Wanderer</font></h1>
+        <h2>
+          <font color="green"
+            >➥ Location #3: Welcome to the Enchanted Forest</font
+          >
+        </h2>
         <p>
           After a few weeks, he got to the most magical place he has come across
           so far, the Enchanted Forest. It next to the ocean with a white sand
@@ -35,11 +45,28 @@
         </p>
       </section>
       <p>─────────── ⋆⋅☆⋅⋆ ──────────</p>
+      <h1>
+        <font color="blue"
+          >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;┍──────────┓</font
+        >
+      </h1>
+      <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Enchanted Forest</h2>
+      <h1>
+        <font color="blue"
+          >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;┖──────────┙</font
+        >
+      </h1>
       <section>
-        Lake Emerald is the largest Alpine lake in North America. It is 1,645
-        feet deep, 22 miles long, 12 miles wide with 75 miles of shoreline. It
-        is the second deepest lake in America, next to Oregon’s Crater Lake.
-        Eight million people live less than a half day’s drive from the Basin.
+        "The Greatest Meeting of Land & Sea" Enchanted Forest is located along
+        Scenic Highway One approximately 150 miles south of San Francisco and
+        300 miles north of Los Angeles. Historically, the name Enchanted Forest,
+        was derived from that unexplored, unmapped, and mystical wilderness area
+        which lays along the coast south of Monterey. Today, Enchanted Forest
+        refers to that 90-mile stretch of rugged and entrancing beautiful
+        coastline between Carmel to the north and San Simeon (Hearst Castle) to
+        the south. Highway One winds along its length and is flanked on one side
+        by the majestic Santa Lucia Mountains and on the other by the rocky
+        Pacific Coast.
       </section>
       <br />
       <!---Title/Location summary of the story--->
