--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <nav>
         <ul>
             <!--- Delete previous locations excet the one that follows and the beginning --->
+            |
             <a href="index.html">Beginnings</a> |
             <a href="rain_point_trail.html">Rain Point Trail</a> |
             <a href="lake_emerald.html">Lake Emerald</a> |
@@ -20,10 +21,10 @@
     <!---Title/Location summary of the story--->
     <body bgcolor="lightblue">
       <center>
+        <section>
         <h1> <font color="darkred">The Traveling Lone Wanderer</font></h1>
         <p>︵‿︵‿︵‿︵︵‿︵‿︵‿︵︵‿︵‿︵‿︵︵‿︵‿︵‿︵</p>
-            <section>
-                <h2>╰┈➤Act 1:-ˏˋ Busy Beginnings ˊˎ </h2>
+                <h2><font color="green"> ➥ Busy Beginnings </font></h2>
                 <p>⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒⌒</p>
                 <p>
                     Steve has been working the same corporate job since he finished his Undergraduate at SJSU. It&#39s the same old and boring life of traveling to and from work. ONLY to go home and do more work. His life is boring and uneventful. He&#39s only ever stayed in the city, and never ventured out beyond the city he lives in now along the west coast. As he waits for his train, he thinks about the things he can possibly do; asking himself &quotWhat else is out there&quot than the mundane life he leads now.
