--- a/lake_emerald.html
+++ b/lake_emerald.html
@@ -9,20 +9,30 @@
   <br /><br />
   <nav>
     <ul>
-        <!--- Delete previous locations excet the one that follows and the beginning --->
-        <a href="index.html">Beginnings</a> |
-        <a href="rain_point_trail.html">Rain Point Trail</a> |
-        <a href="lake_emerald.html">Lake Emerald</a> |
-        <a href="enchanted_forest.html">Enchanted Forest</a> |
-        <a href="meadowbrook_hollow.html">Meadowbrook Hollow</a> |
+      <!--- Delete previous locations excet the one that follows and the beginning --->
+      |
+      <a href="index.html">Beginnings</a>
+      |
+      <a href="rain_point_trail.html">Rain Point Trail</a>
+      |
+      <a href="lake_emerald.html">Lake Emerald</a>
+      |
+      <a href="enchanted_forest.html">Enchanted Forest</a>
+      |
+      <a href="meadowbrook_hollow.html">Meadowbrook Hollow</a>
+      |
     </ul>
-</nav>
+  </nav>
   <!---Title/Location summary of the story--->
   <body bgcolor="lightblue">
     <center>
-      <h1><font color="darkred">The Traveling Lone Wanderer</font></h1>
       <section>
-        <h2>╰┈➤ Location 2:-ˏˋ Laking it Away at Lake Emerald ˊˎ</h2>
+        <h1><font color="darkred">The Traveling Lone Wanderer</font></h1>
+        <h2>
+          <font color="green"
+            >➥ Location #2: Laking it Away at Lake Emerald</font
+          >
+        </h2>
         <p>
           As he roamed California, he stumbled upon this beautiful lake that had
           bright blue with a shade of green along the surface. The water is
@@ -37,7 +47,14 @@
           part of his journey.
         </p>
       </section>
-      <p>─────────── ⋆⋅☆⋅⋆ ──────────</p>
+      <p>─────────── ⋆⋅☆⋅⋆ ───────────</p>
+      <h1>
+        <font color="blue">&nbsp;&nbsp;&nbsp;&nbsp;┍────────────┓</font>
+      </h1>
+      <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lake Emerald</h2>
+      <h1>
+        <font color="blue">&nbsp;&nbsp;&nbsp;&nbsp;┖────────────┙</font>
+      </h1>
       <section>
         Lake Emerald is the largest Alpine lake in North America. It is 1,645
         feet deep, 22 miles long, 12 miles wide with 75 miles of shoreline. It
