--- a/meadowbrook_hollow.html
+++ b/meadowbrook_hollow.html
@@ -1,63 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Lone Wanderer</title>
-    </head>
-    <!----->
-        <br><br>
-    <nav>
-        <ul>
-            <!--- Delete previous locations excet the one that follows and the beginning --->
-            <a href="index.html">Beginnings</a> |
-            <a href="rain_point_trail.html">Rain Point Trail</a> |
-            <a href="lake_emerald.html">Lake Emerald</a> |
-            <a href="enchanted_forest.html">Enchanted Forest</a> |
-            <a href="meadowbrook_hollow.html">Meadowbrook Hollow</a> |
-        </ul>
-    </nav>
-    <!---Title/Location summary of the story--->
-    <body bgcolor="lightblue">
-        <center>
-        <h1><font color="green">➥Location #5: Meadowbrook Hollow</font></h1>
-            <p>After travel for a long while, Steve ultimately decides he'd rather not live in the big city, and instead he would rather live closer to nature. Away from the bustling of the city, he gets a peace of mind in the calming tranquility of the land he was able to buy in Meadowbrook Hollow. He buys an a plot of land and starts building his own selfsufficient lifestyle on the land.</p>
-                                                                                                                                   
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lone Wanderer</title>
+  </head>
+  <!----->
+  <br /><br />
+  <nav>
+    <ul>
+      <!--- Delete previous locations excet the one that follows and the beginning --->
+      |
+      <a href="index.html">Beginnings</a>
+      |
+      <a href="rain_point_trail.html">Rain Point Trail</a>
+      |
+      <a href="lake_emerald.html">Lake Emerald</a>
+      |
+      <a href="enchanted_forest.html">Enchanted Forest</a>
+      |
+      <a href="meadowbrook_hollow.html">Meadowbrook Hollow</a>
+      |
+    </ul>
+  </nav>
+  <!---Title/Location summary of the story--->
+  <body bgcolor="lightblue">
+    <center>
+      <section>
+        <h1><font color="darkred">The Traveling Lone Wanderer</font></h1>
+        <h2><font color="green">➥ Location #4: Meadowbrook Hollow</font></h2>
+        <p>
+          After travel for a long while, Steve ultimately decides he'd rather
+          not live in the big city, and instead he would rather live closer to
+          nature. Away from the bustling of the city, he gets a peace of mind in
+          the calming tranquility of the land he was able to buy in Meadowbrook
+          Hollow. He buys an a plot of land and starts building his own
+          selfsufficient lifestyle on the land.
+        </p>
+
         <p>─────────── ⋆⋅☆⋅⋆ ──────────</p>
-            <section>
-                <h1><font color="blue">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;┍────────────┓</font></h1>
-                    <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Meadowbrook Hollow</h2>
-                <h1><font color="blue">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;┖────────────┙</font></h1>
-                
-                <p>The open fields of Meadowbrook Hollow are dotted with wildflowers in the spring and summer, creating a vibrant, colorful landscape. Mature trees, including oaks, maples, and a few ancient willows, provide shade and shelter, making the land ideal for both livestock and wildlife. A small grove of fruit trees near the center of the plot offers the potential for a home orchard, with apples, pears, and cherries blooming in season.
+        <h1>
+          <font color="blue"
+            >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;┍────────────┓</font
+          >
+        </h1>
+        <h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Meadowbrook Hollow</h2>
+        <h1>
+          <font color="blue"
+            >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;┖────────────┙</font
+          >
+        </h1>
 
-                    The land gently rises toward the northern edge, where a small knoll offers a perfect location for a homestead or cabin, with a view overlooking the entire plot. The knoll catches the morning sun, making it a warm and inviting spot to start the day. The brook, which gives the land its name, meanders through the lower portion of the hollow, its banks lined with reeds and wild grasses, creating a natural habitat for birds and other small creatures.</p>
-            </section>
-    <br>
-    <!---Title/Location summary of the story--->    
+        <p>
+          The open fields of Meadowbrook Hollow are dotted with wildflowers in
+          the spring and summer, creating a vibrant, colorful landscape. Mature
+          trees, including oaks, maples, and a few ancient willows, provide
+          shade and shelter, making the land ideal for both livestock and
+          wildlife. A small grove of fruit trees near the center of the plot
+          offers the potential for a home orchard, with apples, pears, and
+          cherries blooming in season. The land gently rises toward the northern
+          edge, where a small knoll offers a perfect location for a homestead or
+          cabin, with a view overlooking the entire plot. The knoll catches the
+          morning sun, making it a warm and inviting spot to start the day. The
+          brook, which gives the land its name, meanders through the lower
+          portion of the hollow, its banks lined with reeds and wild grasses,
+          creating a natural habitat for birds and other small creatures.
+        </p>
+      </section>
+      <br />
+      <!---Title/Location summary of the story--->
 
-    <!--- 16:9 aspect ratio-->
-    <picture>
-        <source media="(max-width: 239px)" srcset="img/homestead-240p.png"><!--- 320px x 240px -->
-        <source media="(max-width: 639px)" srcset="img/homestead-480p.png"><!--- 640px × 480px -->
-        <source media="(min-width: 1280px)" srcset="img/homestead-720p.png"><!--- 1280px x 720px -->
-        <img src="img/homestead-720p.png" alt="Homestead view of Steve's plot of land"> 
-    </picture>
-        </center>
+      <!--- 16:9 aspect ratio-->
+      <picture>
+        <source media="(max-width: 239px)" srcset="img/homestead-240p.png" />
+        <!--- 320px x 240px -->
+        <source media="(max-width: 639px)" srcset="img/homestead-480p.png" />
+        <!--- 640px × 480px -->
+        <source media="(min-width: 1280px)" srcset="img/homestead-720p.png" />
+        <!--- 1280px x 720px -->
+        <img
+          src="img/homestead-720p.png"
+          alt="Homestead view of Steve's plot of land"
+        />
+      </picture>
+    </center>
 
     <!---Comment/Review section (copy and paste format)--->
-    <br> <p>✦•······················•✦•······················•✦</p>
-            <section>    
-                <h3> &nbsp;&nbsp;&nbsp; Steve S. ⭐⭐⭐⭐⭐</h3>
-                <p>┍────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┓</p>
-                <p id="edit" contenteditable="true">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Leave your thoughts here!</p>
-                <p>┖────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┙</p>
-            </section>
-            <p>✦•······················•✦•······················•✦</p>
-    </body>
-    <footer>
-        <br><p>₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪</p><br>
-        <p>HTML Archive Assignment: Alicia&nbspChi &amp Jozey&nbspNguyen </p><br>
-        <p>₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪</p><br>
-    </footer>
+    <br />
+    <p>✦•······················•✦•······················•✦</p>
+    <section>
+      <h3>&nbsp;&nbsp;&nbsp; Steve S. ⭐⭐⭐⭐⭐</h3>
+      <p>
+        ┍────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┓
+      </p>
+      <p id="edit" contenteditable="true">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Leave your
+        thoughts here!
+      </p>
+      <p>
+        ┖────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┙
+      </p>
+    </section>
+    <p>✦•······················•✦•······················•✦</p>
+  </body>
+  <footer>
+    <br />
+    <p>₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪</p>
+    <br />
+    <p>HTML Archive Assignment: Alicia&nbspChi &amp Jozey&nbspNguyen</p>
+    <br />
+    <p>₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪₪</p>
+    <br />
+  </footer>
 </html>
