--- a/rain_point_trail.html
+++ b/rain_point_trail.html
@@ -10,6 +10,7 @@
     <nav>
         <ul>
             <!--- Delete previous locations excet the one that follows and the beginning --->
+            |
             <a href="index.html">Beginnings</a> |
             <a href="rain_point_trail.html">Rain Point Trail</a> |
             <a href="lake_emerald.html">Lake Emerald</a> |
@@ -20,11 +21,12 @@
     <!---Title/Location summary of the story--->
     <body bgcolor="lightblue">
         <center>
-        <h1><font color="darkred">➥Location #1: Rain Point Trail</font></h1>
+            <section>
+        <h1><font color="darkred">The Traveling Lone Wanderer</font></h1>
+        <h2><font color="green">➥ Location #1: Rain Point Trail</font></h2>
             <p>Steve decides to try going somewhere more local and do an activity to dip his feet in the surrounding area outside of the big city. He remembers the days when he would go out for walks in the city. Loving the greenery of the trees and grass, he decides to explore what's around him locally first in order to find nature trails he can explore. After browsing through endless sites online he comes across something interesting…</p>
                 <pre>                                                                                                                       A new experiences</pre>
         <p>─────────── ⋆⋅☆⋅⋆ ──────────</p>
-            <section>
                 <h1><font color="blue">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;┍────────────┓</font></h1>
 <pre>
     ┌───┐░░░░░░░┌───┐░░░░░░░┌┐░┌────┐░░░░░┌┐
